worked on the security features